# ZED_Bridge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SN39866630.conf  package.xml  zed_bridge_plugins.xml
.devcontainer/: devcontainer.json
.github/workflows/: issue_label.yml  ros2-ci.yml
config/: recorder_config.yaml
include/zed_bridge/: zed_bridge.hpp
launch/: camera_record.launch.py  zed_bridge.launch.xml  zed_bridge_launch.py
scripts/: recording_bridge.py
src/: zed_bridge.cpp
